# rectangles_2d_storage

./: .gitignore  main.py  pyproject.toml
data_models/: rectangle.py  rectangle_store.py
