[project]
name = "rectangles"
version = "0.1.0"
description = "A 3d rectangles storage package"
authors = [
    {name = "shovael",email = "shuvi97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
